# tonic-web-play

./: Cargo.toml  README.md  build.rs
deploy/: ca.key  ca.pem  client.csr  tonic-web-play.localhost.crt  tonic-web-play.localhost.key
proto/: ping.proto
src/: client.rs  main.rs  ping.rs
