[package]
name = "tonic-web-play"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1.29", features = ["rt-multi-thread", "macros"] }
prost = "0.11"
prost-types = "0.11"
tonic = { version = "0.9", features = ["tls", "gzip"] }
tonic-types = "0.9"
tonic-web = "0.9"
bytes = "*"
http = "*"
hyper = "*"

[build-dependencies]
tonic-build = { version = "0.9", features = ["prost"] }
